Fix the flex containers in the login and signup page, they now can wrap in small devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,11 +33,17 @@ a{
   background-color: #5f5f5f;
   padding: 1.5rem;
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
+  display: flex;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
+
+  flex-wrap: wrap;
+}
+
+.column-register{
+  width: 300px;
+  flex: auto;
 }
 
 .button{
